force-app/main/default/objects/Contact/fields/UnitRelevance__c.field-meta.xml
<CustomField>
    <fullName>UnitRelevance__c</fullName>
    <label>Unit Relevance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BLC</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>GBCH</fullName>
            </value>
            <value>
                <fullName>GBDE</fullName>
            </value>
            <value>
                <fullName>GBSGP</fullName>
            </value>
            <value>
                <fullName>GBUS</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>HYS</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>VH</fullName>
            </value>
            <value>
                <fullName>XB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>