force-app/main/default/objects/Contact/fields/UserAlias__c.field-meta.xml
<CustomField>
    <fullName>UserAlias__c</fullName>
    <formula>User__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Alias</label>
    <type>Text</type>
</CustomField>