force-app/main/default/objects/Contact/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <formula>User__r.ID_18_digits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserId</label>
    <type>Text</type>
</CustomField>