force-app/main/default/objects/Contact/fields/ValInternalContact__c.field-meta.xml
<CustomField>
    <fullName>ValInternalContact__c</fullName>
    <formula>RecordType.DeveloperName =&quot;InternalContact&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValInternalContact</label>
    <type>Checkbox</type>
</CustomField>