force-app/main/default/objects/Contact/fields/ValNoRealEmployee__c.field-meta.xml
<CustomField>
    <fullName>ValNoRealEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValNoRealEmployee</label>
    <type>Checkbox</type>
</CustomField>