force-app/main/default/objects/Contact/fields/ValUserActive__c.field-meta.xml
<CustomField>
    <fullName>ValUserActive__c</fullName>
    <formula>User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValUserActive</label>
    <type>Checkbox</type>
</CustomField>