force-app/main/default/objects/Contact/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prototype for marking persons with high impact / stake holders / vip&apos;s</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>