force-app/main/default/objects/Contact/fields/Xing__c.field-meta.xml
<CustomField>
    <fullName>Xing__c</fullName>
    <label>XING</label>
    <length>80</length>
    <type>Text</type>
</CustomField>