force-app/main/default/objects/Contact/fields/ZEmailPreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>ZEmailPreviousOwner__c</fullName>
    <label>ZEmailPreviousOwner</label>
    <type>Email</type>
</CustomField>