force-app/main/default/objects/Contact/fields/ZUserYesNo__c.field-meta.xml
<CustomField>
    <fullName>ZUserYesNo__c</fullName>
    <formula>IF( 
( Owner.ContactId  = $User.Id), 
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZUserYesNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>