force-app/main/default/objects/Contact/recordTypes/CompanyContact.recordType-meta.xml
<RecordType>
    <fullName>CompanyContact</fullName>
    <active>true</active>
    <description>Use this Record Type for Contacts attached to Company Accounts</description>
    <label>Company Contact</label>
</RecordType>