force-app/main/default/objects/Contact/recordTypes/InternalContact.recordType-meta.xml
<RecordType>
    <fullName>InternalContact</fullName>
    <active>true</active>
    <description>Use this Record Type to add an internal contact to a BLC Unit</description>
    <label>Internal Contact</label>
</RecordType>