force-app/main/default/objects/Contact/recordTypes/SummaryContact.recordType-meta.xml
<RecordType>
    <fullName>SummaryContact</fullName>
    <active>true</active>
    <description>Use this Record Type to add a new contact to the Summary Account</description>
    <label>Summary Contact</label>
</RecordType>