force-app/main/default/objects/Contact/validationRules/CO002_Communication_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CO002_Communication_required_fields</fullName>
    <active>false</active>
    <description>12.12.2017, ary: Gleiche Bemerkung wie bei Account</description>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true,
RecordType.Id = &apos;012b0000000bub6&apos;,
OR(
AND(
ISBLANK (LocationStreetNr__c), 
ISBLANK (Phone),
ISBLANK (MobilePhone),
ISBLANK (Email)
)
)
)</errorConditionFormula>
    <errorMessage>Please fill out one of the following fields: &quot;Location Street, Nr&quot;, &quot;Phone&quot;, &quot;Mobile&quot;, or &quot;Email&quot;.
(CO002)</errorMessage>
</ValidationRule>