force-app/main/default/objects/Contact/validationRules/CO006_Job_Title_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>CO006_Job_Title_Employee</fullName>
    <active>true</active>
    <description>Nur HR darf Job Title eines Mitarbeitenden ändern</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true, 
 $User.IsHRManager__c = false,
 RecordTypeId = &quot;012b0000000bub1&quot;,
OR(
ISCHANGED( JobTitle__c ),
ISNEW()
)
)</errorConditionFormula>
    <errorDisplayField>JobTitle__c</errorDisplayField>
    <errorMessage>You are not allowed to change your Job Title. Please get in touch with HR.
(CO006)</errorMessage>
</ValidationRule>