force-app/main/default/objects/Contact/listViews/All_Contacts_intern.listView-meta.xml
<ListView>
    <fullName>All_Contacts_intern</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>JobTitle__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LocationCity__c</columns>
    <columns>CostCenter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Calydo,Hotz Brand,gateB AG,brandleadership,hieronymus,Brand Leadership Managemen</value>
    </filters>
    <label>Alle Kontakte - intern</label>
</ListView>