force-app/main/default/objects/Contact/listViews/BLC_Former_Employees_Alumnis.listView-meta.xml
<ListView>
    <fullName>BLC_Former_Employees_Alumnis</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>StaffNr__c</columns>
    <columns>Language__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <label>BLC - Former Employees - Alumnis</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_HR_OM</group>
    </sharedTo>
</ListView>