force-app/main/default/objects/Contact/listViews/BLC_My_Contacts_Mailing_List.listView-meta.xml
<ListView>
    <fullName>BLC_My_Contacts_Mailing_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>DuSieOwner__c</columns>
    <columns>JobTitle__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CompanyContact</value>
    </filters>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>German</value>
    </filters>
    <label>BLC - My Contacts - Mailing List</label>
    <language>en_US</language>
</ListView>