force-app/main/default/objects/Contact/listViews/HBC_Owner.listView-meta.xml
<ListView>
    <fullName>HBC_Owner</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UnitRelevance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UnitRelevance__c</field>
        <operation>equals</operation>
        <value>HBC</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ChStei</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>PaEnss</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>SeZeder</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mboss</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>AnSeil</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bberg</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>RaAmm</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>StBeil</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>TBaum</value>
    </filters>
    <label>HBC - Owner / Owner Alias</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_HBC_Alle</group>
        <group>Skywalk_HBC_GL</group>
        <group>Skywalk_HBC_MD</group>
    </sharedTo>
</ListView>