force-app/main/default/objects/Contact/listViews/Internal_Contacts.listView-meta.xml
<ListView>
    <fullName>Internal_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>StaffNr__c</columns>
    <columns>EmployeeCosts__c</columns>
    <columns>CostCenter__c</columns>
    <columns>ContactType__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.InternalContact</value>
    </filters>
    <label>Internal Contacts_Check</label>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>