force-app/main/default/objects/Contact/listViews/Internal_Contacts_Abacus_Time_Time.listView-meta.xml
<ListView>
    <fullName>Internal_Contacts_Abacus_Time_Time</fullName>
    <columns>FULL_NAME</columns>
    <columns>AbacusDefaultTimeType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.InternalContact</value>
    </filters>
    <label>Internal Contacts - Abacus Time Time</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_HR_OM</group>
    </sharedTo>
</ListView>