force-app/main/default/objects/Contact/listViews/Internal_Contacts_Workload_FTE.listView-meta.xml
<ListView>
    <fullName>Internal_Contacts_Workload_FTE</fullName>
    <columns>FULL_NAME</columns>
    <columns>TimetrackerWorkload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TimetrackerWorkload__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.InternalContact</value>
    </filters>
    <label>Internal Contacts - Workload % &amp; FTE</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_HR_OM</group>
    </sharedTo>
</ListView>