force-app/main/default/objects/Contact/listViews/IT_Contacts.listView-meta.xml
<ListView>
    <fullName>IT_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>IT Contacts</label>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>