force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>JobTitle__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LocationCity__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Contacts</label>
    <language>en_US</language>
</ListView>